# agile-context-engine

./: .gitignore  README.md  deploy-skills.ps1  instructions_out.txt  pyproject.toml
conf/: ace-config.json
scripts/: instructions.py
shaping/: ace-instruction-injection-analysis.md  ace-shaping-strategy.md  architecture-patterns.md  shaping.md
skills/ace-build/: AGENTS.md  SKILL.md
skills/ace-build/content/: core-definitions.md  intro.md  output-structure.md  script-invocation.md  shaping-process.md  validation.md
skills/ace-build/scripts/: scaffold.py
skills/ace-commit-msg/: AGENTS.md  SKILL.md  skill-config.json
skills/ace-commit-msg/content/: core.md  output.md  validation.md
skills/ace-commit-msg/docs/: ace-commit-msg-output.md
skills/ace-context-to-memory/: AGENTS.md  README.md  SKILL.md  skill-config.json
skills/ace-context-to-memory/content/: output.md  process.md  rag-retrieval.md  script-invocation.md
skills/ace-context-to-memory/scripts/: build.py  chunk_markdown.py  convert_to_markdown.py  embed_and_index.py  index_memory.py  link_workspace_source.py  organize_story_map_hierarchy.py  search_memory.py  sync_sharepoint_urls.py
skills/ace-proposal-respond/: AGENTS.md  SKILL.md  skill-config.json
skills/ace-scale-build/: AGENTS.md  README.md  SKILL.md  skill-config.json
skills/ace-shaping/: AGENTS.md  SKILL.md  metadata.json  skill-config.json
skills/ace-skill-build/: AGENTS.md  README.md  metadata.json
skills/agile-skill-build/: AGENTS.md  README.md
src/: __init__.py  ace_skill.py  config.py  engine.py  instructions.py  rule_set.py
(+34 files in other folders)
