[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agile-context-engine"
version = "0.1.0"
description = "Agile Context Engine — build and run skills in their entirety"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
